@@ -2,6 +2,7 @@
 #include "libclient/net/server.h"
 #include "libclient/net/client.h"
 #include "libclient/net/login.h"
+#include "libclient/net/websocketserver.h"
 #include "libshared/net/servercmd.h"
 #include <QDebug>
 #include <QMetaEnum>
@@ -10,29 +11,21 @@
 #ifdef HAVE_TCPSOCKETS
 #	include "libclient/net/tcpserver.h"
 #endif
-#ifdef HAVE_WEBSOCKETS
-#	include "libclient/net/websocketserver.h"
-#endif
 
 namespace net {
 
 Server *
 Server::make(const QUrl &url, int timeoutSecs, int proxyMode, Client *client)
 {
-#if defined(HAVE_WEBSOCKETS) && defined(HAVE_TCPSOCKETS)
+#ifdef HAVE_TCPSOCKETS
 	if(url.scheme().startsWith(QStringLiteral("ws"), Qt::CaseInsensitive)) {
 		return new WebSocketServer(timeoutSecs, proxyMode, client);
 	} else {
 		return new TcpServer(timeoutSecs, proxyMode, client);
 	}
-#elif defined(HAVE_TCPSOCKETS)
-	Q_UNUSED(url);
-	return new TcpServer(timeoutSecs, proxyMode, client);
-#elif defined(HAVE_WEBSOCKETS)
+#else
 	Q_UNUSED(url);
 	return new WebSocketServer(timeoutSecs, proxyMode, client);
-#else
-#	error "No socket implementation compiled in."
 #endif
 }
 
