@@ -254,11 +254,7 @@ bool ServerConfig::setAdminSectionsLocked(
 
 bool ServerConfig::preferWebSockets() const
 {
-#ifdef HAVE_WEBSOCKETS
 	return m_internalCfg.webSocket && getConfigBool(config::PreferWebSockets);
-#else
-	return false;
-#endif
 }
 
 int ServerConfig::parseTimeString(const QString &str)
