@@ -13,11 +13,9 @@ class ThinServerClient final : public Client {
 public:
 	ThinServerClient(
 		QTcpSocket *tcpSocket, ServerLog *logger, QObject *parent = nullptr);
-#ifdef HAVE_WEBSOCKETS
 	ThinServerClient(
 		QWebSocket *webSocket, const QHostAddress &ip, bool browser,
 		ServerLog *logger, QObject *parent = nullptr);
-#endif
 	~ThinServerClient() override;
 
 	/**
